AUT-1621 Fix back-channel logout not triggered
