# internal/httpclient/api/openapi.yaml
@@ -1062,11 +1062,11 @@ paths:
         schema:
           type: boolean
         style: form
-      - description: "If set to `?trigger_back_channel_logout=true`, performs back\
-          \ channel logout for matching clients"
+      - description: "If set to `?trigger_backchannel_logout=true`, performs back-channel\
+          \ logout for matching clients"
         explode: true
         in: query
-        name: trigger_back_channel_logout
+        name: trigger_backchannel_logout
         required: false
         schema:
           type: boolean
@@ -1208,11 +1208,11 @@ paths:
         schema:
           type: boolean
         style: form
-      - description: "If set to `?trigger_back_channel_logout=true`, performs back\
-          \ channel logout for matching clients"
+      - description: "If set to `?trigger_backchannel_logout=true`, performs back-channel\
+          \ logout for matching clients"
         explode: true
         in: query
-        name: trigger_back_channel_logout
+        name: trigger_backchannel_logout
         required: false
         schema:
           type: boolean
